k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    NodePort: 30080
  type: NodePort
